Center and align all menu items. Fix bug with not entire page background being dimmed.

--- a/JataakaTeamwork/games/splashscreen/styles/style.less
+++ b/JataakaTeamwork/games/splashscreen/styles/style.less
@@ -36,12 +36,12 @@ body {
     color: @default-font-col;
     font-family: @default-font-family;
     cursor: context-menu;
-    height: 100%;
-    width: 100%;
+    height: inherit;
+    width:  inherit;
 
     #start-screen-wrapper {
         position: absolute;
-        width: 1330px;
+        width: 1000px;
 
         img {
             margin: 0 auto;
@@ -102,13 +102,15 @@ body {
                 width: 25px;
                 height: 25px;
                 float: right;
-                margin-top: 15px;
+                margin-top: -27px;
+                margin-right: -12px;
             }
 
             ul {
                 list-style-type: none;
                 display: inline-block;
                 margin-top: 15px;
+                margin-left: 22px;
 
                 li {
                     display: inline-block;
@@ -123,9 +125,9 @@ body {
         }
 
         .li-item-content {
-            display: none;
             background-color: rgba(0, 0, 0, 0.5);
-            position: absolute;
+            display: none;
+            position: fixed;
             top: 0;
             left: 0;
             height: 100%;
@@ -188,7 +190,8 @@ body {
 
                 .col {
                     display: inline-block;
-                    margin: auto;
+                    margin: 0 auto;
+                    margin-top: 10px;
 
                     &:first-of-type {
                         float: left;
